--- a/html/style.css
+++ b/html/style.css
@@ -12,6 +12,7 @@ body {
     font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, system-ui, Roboto, sans-serif;
 }
 
+/* ㅇ연습용 */
 
 /* --- 헤더 & 네비게이션 --- */
 
